@@ -133,6 +133,13 @@ public:
 	}
 
 	/**
+	 * Checks whether this is a "special" directory
+	 * (e.g. #DEVICE_PLAYLIST) and whether the underlying plugin
+	 * is available.
+	 */
+	bool IsPluginAvailable() const noexcept;
+
+	/**
 	 * Remove this #Directory object from its parent and free it.  This
 	 * must not be called with the root Directory.
 	 *
